# Om

./: .gitignore  404.html  CMakeLists.txt  CNAME  ChangeLog.markdown  Doxyfile  License.html  License.markdown  README  README.markdown  ReadMe.markdown  annotated.html  annotated.js  atom_8cpp.html  atom_8cpp__dep__incl.map  atom_8cpp__dep__incl.md5  atom_8cpp__incl.map  atom_8cpp__incl.md5  atom_8cpp_source.html  atom_8hpp.html  atom_8hpp.js  atom_8hpp__dep__incl.map  atom_8hpp__dep__incl.md5  atom_8hpp__incl.map  atom_8hpp__incl.md5  atom_8hpp_source.html  back__pull__character__operation_8cpp.html  back__pull__character__operation_8cpp__dep__incl.map  back__pull__character__operation_8cpp__dep__incl.md5  back__pull__character__operation_8cpp__incl.map  back__pull__character__operation_8cpp__incl.md5  back__pull__character__operation_8cpp_source.html  back__pull__character__operation_8dox.html  back__pull__character__operation_8hpp.html  back__pull__character__operation_8hpp.js  back__pull__character__operation_8hpp__dep__incl.map  back__pull__character__operation_8hpp__dep__incl.md5  back__pull__character__operation_8hpp__incl.map  back__pull__character__operation_8hpp__incl.md5  back__pull__character__operation_8hpp_source.html  (+4615 more)
code/: external.cpp  external.hpp  internal.cpp  internal.hpp  om.cpp  om.dox  om.external  om.hpp  om.inc  om.internal
code/om/: atom.cpp  atom.hpp  code_point.cpp  code_point.hpp  consumer.cpp  consumer.hpp  copy.cpp  copy.hpp  copyable.cpp  copyable.hpp  default_atom.cpp  default_atom.hpp  default_consumer.cpp  default_consumer.hpp  default_copyable.cpp  default_copyable.hpp  default_element.cpp  default_element.hpp  default_evaluand.cpp  default_evaluand.hpp  default_evaluation.cpp  default_evaluation.hpp  default_giveable.cpp  default_giveable.hpp  default_moveable.cpp  default_moveable.hpp  default_operation.cpp  default_operation.hpp  default_program.cpp  default_program.hpp  default_queue.cpp  default_queue.hpp  definition.cpp  definition.hpp  element.cpp  element.hpp  environment.cpp  environment.hpp  evaluand.cpp  evaluand.hpp  (+94 more)
code/om/language/: atom.cpp  atom.hpp  consumer.cpp  consumer.hpp  default_atom.cpp  default_atom.hpp  default_consumer.cpp  default_consumer.hpp  default_element.cpp  default_element.hpp  default_program.cpp  default_program.hpp  element.cpp  element.hpp  environment.cpp  environment.hpp  evaluation.cpp  evaluation.hpp  evaluator.cpp  evaluator.hpp  expression.cpp  expression.hpp  form.cpp  form.hpp  lexicon.cpp  lexicon.hpp  literal.cpp  literal.hpp  null.cpp  null.hpp  operand.cpp  operand.hpp  operation.cpp  operation.hpp  operator.cpp  operator.hpp  pair.cpp  pair.hpp  producer.cpp  producer.hpp  (+14 more)
code/om/operation/: back_pull_character_operation.cpp  back_pull_character_operation.dox  back_pull_character_operation.hpp  back_pull_code_point_operation.cpp  back_pull_code_point_operation.dox  back_pull_code_point_operation.hpp  back_pull_element_operation.cpp  back_pull_element_operation.dox  back_pull_element_operation.hpp  back_pull_form_operation.cpp  back_pull_form_operation.hpp  back_pull_operand_operation.cpp  back_pull_operand_operation.dox  back_pull_operand_operation.hpp  back_pull_operator_operation.cpp  back_pull_operator_operation.hpp  back_pull_pair_operation.cpp  back_pull_pair_operation.dox  back_pull_pair_operation.hpp  back_pull_separator_operation.cpp  back_pull_separator_operation.dox  back_pull_separator_operation.hpp  back_pull_term_operation.cpp  back_pull_term_operation.dox  back_pull_term_operation.hpp  choose_operation.cpp  choose_operation.dox  choose_operation.hpp  copy_operation.cpp  copy_operation.dox  copy_operation.hpp  decode_operation.cpp  decode_operation.dox  decode_operation.hpp  default_incomplete_operation.cpp  default_incomplete_operation.hpp  define_operation.cpp  define_operation.dox  define_operation.hpp  dequote_operation.cpp  (+105 more)
code/om/operations/: back_pull_character_operation.cpp  back_pull_character_operation.dox  back_pull_character_operation.hpp  back_pull_code_point_operation.cpp  back_pull_code_point_operation.dox  back_pull_code_point_operation.hpp  back_pull_element_operation.cpp  back_pull_element_operation.dox  back_pull_element_operation.hpp  back_pull_form_operation.cpp  back_pull_form_operation.dox  back_pull_form_operation.hpp  back_pull_operand_operation.cpp  back_pull_operand_operation.dox  back_pull_operand_operation.hpp  back_pull_operator_operation.cpp  back_pull_operator_operation.dox  back_pull_operator_operation.hpp  back_pull_pair_operation.cpp  back_pull_pair_operation.dox  back_pull_pair_operation.hpp  back_pull_separator_operation.cpp  back_pull_separator_operation.dox  back_pull_separator_operation.hpp  back_pull_term_operation.cpp  back_pull_term_operation.dox  back_pull_term_operation.hpp  choose_operation.cpp  choose_operation.dox  choose_operation.hpp  copy_operation.cpp  copy_operation.dox  copy_operation.hpp  decode_operation.cpp  decode_operation.dox  decode_operation.hpp  define_operation.cpp  (+131 more)
dependencies/Boost/: build.cmake
dependencies/Icu4c/: build.cmake
documentation/: Doxyfile  footer.html  stylesheet.css
doxygen/: Doxyfile  footer.html  header.html  stylesheet.css
input/: CMakeLists.txt  generate.bat  generate.sh
input/code/: om.cpp  om.dox  om.hpp  om.internal
input/documentation/: Doxyfile  stylesheet.css
input/internal/: CMakeLists.txt  make.bat  make.sh  remake.bat  remake.sh  unmake.bat  unmake.sh
internal/: CMakeLists.txt
scripts/: list_headers.bat  list_headers.sh
search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_67.js  classes_69.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_6f.js  classes_70.js  classes_71.js  classes_72.js  classes_73.js  classes_74.js  classes_77.js  defines_6f.html  defines_6f.js  enums_6c.js  (+129 more)
(+836 files in other folders)
